<resources>
    <string name="app_name">BAWP</string>
    <string name="action_settings">Settings</string>
    <string name="login_Hint_Username">Username</string>
    <string name="login_Password_Hint">Password</string>
    <string name="login_Button_Name">Login</string>
    <string name="create_account_text">Create Account.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="create_account_button_title">Create Account</string>
    <string name="show_as_grid">Show as grid</string>
    <string name="show_as_list">Show as list</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="error_login">Wrong username or password.</string>
</resources>
