<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lightGrey"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RelativeLayout
            android:padding="35dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/createAccountFirstName"
                android:layout_marginTop="10dp"
                android:hint="@string/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/createAccountLastName"
                android:layout_marginTop="10dp"
                android:layout_below="@id/createAccountFirstName"
                android:hint="@string/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/createAccountUsername"
                android:layout_marginTop="10dp"
                android:layout_below="@id/createAccountLastName"
                android:hint="@string/login_Hint_Username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/createAccountPassword"
                android:layout_marginTop="10dp"
                android:layout_below="@id/createAccountUsername"
                android:hint="@string/login_Password_Hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/createAccountButton"
                android:layout_marginTop="10dp"
                android:layout_below="@id/createAccountPassword"
                android:text="@string/create_account_button_title"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>