<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="bawpapp.crackeddish.com.bawp.MainActivity"
    tools:showIn="@layout/activity_main">

    <android.support.v7.widget.CardView
        android:layout_width="368dp"
        android:layout_height="260dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <RelativeLayout
        android:padding="15dp"
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/loginUsername"
            android:hint="@string/login_Hint_Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/loginPassword"
            android:layout_below="@id/loginUsername"
            android:layout_marginTop="25dp"
            android:hint="@string/login_Password_Hint"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/loginButton"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_below="@id/loginPassword"
            android:layout_marginTop="15dp"
            android:text="@string/login_Button_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/createAccountText"
            android:text="@string/create_account_text"
            android:layout_below="@+id/loginButton"
            android:layout_alignParentRight="true"
            android:layout_marginTop="14dp"
            android:textStyle="italic"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/errorMessage"

            android:layout_below="@+id/loginButton"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="14dp"
            android:textStyle="italic"
            android:textColor="@android:color/holo_red_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>
